--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"build": "npm run build:css && npm run build:autoprefix",
 		"watch:sass": "onchange \"./src/sass/main.scss\" -- npm run build:css:dev && npm run build:autoprefix",
 		"serve": "browser-sync start --server ./docs -w --files \"./docs/**/*.html\" \"./docs/css/main.css\" \"./docs/js/script.js\"",
-		"watch": "npm run build && npm-run-all --parallel serve watch:sass"
+		"watch": "npm run build && npm-run-all --parallel serve watch:sass",
+		"start": "npm run build && npm-run-all --parallel serve watch:sass"
+
 	},
 	"repository": {
 		"type": "git",
